<resources>
    <string name="app_name">Performa_PITB</string>
    <string name="select">Division</string>
    <string name="fill_the_fields_below">Fill the fields below</string>
    <string name="staric">*</string>
    <string name="division">Division</string>
    <string name="select_">Select</string>
    <string name="district">District</string>
    <string name="tehsil">Tehsil</string>
    <string name="date">Date</string>
    <string name="dpcc_meeting_attended">DPCC Meeting Attended</string>
    <string name="_13_06_2022">13 / 06 / 2022</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="spot_price_checking">Spot Price Checking</string>
    <string name="rate_list_displayed">Rate List Displayed</string>
    <string name="lahore">Lahore</string>
    <string name="enter_market_name">Enter Market Name</string>
    <string name="market_name">Market Name</string>
    <string name="commodities_details">Commodities Details</string>
    <string name="sr">Sr</string>
    <string name="commodities">Commodities</string>
    <string name="avail">Avail</string>
    <string name="na">NA</string>
    <string name="notified_retail_rate">Notified\n Retail Rate</string>
    <string name="spot_price">Spot \nPrice</string>
    <string name="upload_image">Upload Image</string>
    <string name="picture_uploaded">Picture Uploaded</string>
    <string name="spot_price2">Spot Price</string>
    <string name="notified_retail_rate2">Notified Retail Rate</string>
    <string name="_01">01</string>
    <string name="_02">02</string>
    <string name="_03">03</string>
    <string name="_04">04</string>
    <string name="_06">06</string>
    <string name="_07">07</string>
    <string name="_08">08</string>
    <string name="_09">09</string>
    <string name="sugar">Sugar</string>
    <string name="_900">900</string>
    <string name="_7010">7010</string>
    <string name="_05">05</string>
    <string name="tomato">Tomato</string>
    <string name="daal_chana">Daal Chana</string>
    <string name="_600">600</string>
    <string name="daal_moong">Daal moong</string>
    <string name="potato">Potato</string>
    <string name="ghee">Ghee</string>
    <string name="_100">100</string>
    <string name="onion">Onion</string>
    <string name="floor_atta">Floor (Atta)</string>
    <string name="please_upload_image">Please Upload Image</string>
    <string name="chicken">Chicken</string>
    <string name="date_txt">date_txt</string>
    <string name="enter_remarks">Enter Remarks</string>


    <string-array name="division_array">
        <item>Select</item>
        <item>Division 1</item>
        <item>Division 2</item>
        <item>Division 3</item>
        <item>Division 4</item>
    </string-array>

    <string-array name="district_array">
        <item>Select</item>
        <item>District 1</item>
        <item>District 2</item>
        <item>District 3</item>
        <item>District 4</item>
    </string-array>

</resources>
