<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="15dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="17dp"
        android:text="@string/fill_the_fields_below"
        android:textColor="@color/gry"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="14dp"
        android:layout_toEndOf="@+id/textView"
        android:text="@string/staric"
        android:textColor="#b82527"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:id="@+id/division"
        android:layout_marginTop="21dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/division"
            android:textColor="@color/gry"
            android:textSize="16sp"
             />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColorHint="#449e28"
            app:hintTextColor="#449e28"
            android:padding="8dp"
            app:placeholderTextColor="#c5c5c5"
            android:hint="@string/lahore"
            android:background="@drawable/corner_edittext">
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/district"
        android:layout_below="@+id/division"
        android:layout_marginTop="21dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/district"
            android:textColor="@color/gry"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="8dp"
            android:background="@drawable/corner_edittext"
            android:hint="@string/select_">

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Tehsil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/district"
        android:layout_marginTop="21dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/tehsil"
            android:textColor="@color/gry"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/corner_edittext"
            android:hint="@string/select_"
            android:padding="8dp">

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Tehsil"
        android:layout_marginTop="21dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/date2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/corner_edittext"
            android:clickable="false"
            android:cursorVisible="false"
            android:inputType="date"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/_13_06_2022"
            android:padding="20dp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/Dpcc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date"
        android:layout_marginTop="21dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_weight="2"
            android:text="@string/dpcc_meeting_attended"
            android:textColor="@color/gry"
            android:textSize="16sp" />

        <RadioGroup

            android:id="@+id/DpccRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no"
                android:textSize="16sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/yes"
                android:textSize="16sp" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Rate_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Dpcc"
        android:layout_marginTop="21dp"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_weight="2"
            android:text="@string/rate_list_displayed"
            android:textColor="@color/gry"
            android:textSize="16sp" />

        <RadioGroup

            android:id="@+id/RateRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rateradio_id1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rateradio_id2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/yes"
                android:textSize="16sp" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Spotprice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Rate_list"
        android:layout_marginTop="21dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_weight="2"
            android:text="@string/spot_price_checking"
            android:textColor="@color/gry"
            android:textSize="16sp" />

        <RadioGroup

            android:id="@+id/priceradio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/priceradio_id1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/priceradio_id2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/yes"
                android:textSize="16sp" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/marketname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Spotprice"
        android:layout_marginTop="21dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/market_name"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/price"
            android:layout_marginTop="10dp"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:inputType="text"
            android:padding="20dp"
            android:background="@drawable/corner_edittext"
            android:focusableInTouchMode="false"
            android:hint="@string/enter_market_name" />
    </LinearLayout>

</RelativeLayout>
</ScrollView>